--- a/mysqlPrometheus/prometheus.base.yml
+++ b/mysqlPrometheus/prometheus.base.yml
@@ -9,11 +9,11 @@ alerting:
   alertmanagers:
     - static_configs:
         - targets:
-          - 192.168.8.117:9093
+          #- 192.168.8.117:9093
 
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
-  - "alert_rules.yml"
+  #- "alert_rules.yml"
   # - "second_rules.yml"
 
 # A scrape configuration containing exactly one endpoint to scrape:
@@ -27,14 +27,6 @@ scrape_configs:
 
     static_configs:
       - targets: ["__HOST_IP__:9090","__HOST_IP__:9100"]
-
-  - job_name: "Docker"
-    static_configs:
-      - targets: ["192.168.8.117:9323"]
-
-  - job_name: "Cadvisor"
-    static_configs:
-      - targets: ["192.168.8.117:8080"]
 
   - job_name: "Mysql"
     static_configs:
